@@ -7,6 +7,7 @@
 ## Bugfixes
 
 - made it so the albumtype is displayed in UI -- kaneryu on 2025-09-21
+- don't spam online checks when we're offline -- kaneryu on 2025-09-23
 
 
 
